--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@
 }
 
 .App-logo {
-  height: 40vmin;
+  height: 13vmin;
   pointer-events: none;
 }
 
@@ -15,7 +15,7 @@
 
 .App-header {
   background-color: #282c34;
-  min-height: 10vh;
+  min-height: 15vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -36,4 +36,28 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.container {
+  background-color: #61dafb;
+}
+
+ul {
+  list-style: devanagari outside none;
+  border: 2 px solid skyblue;
+  padding: 30px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+}
+
+li {
+  margin: 10px;
+  padding: 5px 5px;
+  border: 2px solid black;
+  border-radius: 12.5%;
+  background-color: lightslategray;
+  font-family: monospace;
 }
